--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-We are facing issues, we will be back soon
+<html><head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+  	<link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:500&amp;display=swap" rel="stylesheet">
+
+	<style type="text/css">
+		html, body {
+		  font-size: 0.92em !important;
+		  background-color: #27226e;
+		  font-weight: 400;
+		  font-family: 'Red Hat Display', sans-serif;
+		  letter-spacing: 0.3px !important;
+		  line-height: 1.5 !important;
+		  -webkit-font-smoothing: antialiased;
+		  padding: 0px;
+		  margin: 0px;
+		  width: 100%;
+		  height: 100%;
+		}
+		.card {
+			background: #fff;
+			position: fixed;
+		    top: 50%;
+		    left: 50%;
+		    transform: translate(-50%, -50%);
+		    width: 80%;
+		    height: 50%;
+		    box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.14);
+		    border-radius: 5px;
+		    display: flex;
+		    align-items: center;
+		    justify-content: center;
+		    flex-flow: column;
+		    text-align: center;
+		    z-index: 10;
+		    max-width: 400px;
+		}
+		.card img {
+			width: 80%;
+			margin-bottom: 40px;
+		}
+	</style>
+</head>
+<body>
+	<div class="card">
+		<img src="https://cdn.cureskin.com/app/img/logo_blue.svg">
+		<div style="font-size: 18px; margin-bottom: 20px;">We are under maintenance.</div>
+		<div style="font-size: 13px;color: #737373;">We will be back soon. Sorry for the inconvenience.</div>
+    </div>
+
+
+</body></html>
